se agregan pages

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -19,7 +19,7 @@ body {
   }
 }
   
-  .container-heels{
+  .container-new-heels{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +27,7 @@ body {
     margin: 10px;
     border: 10px;
   }
-  .container-clothing{
+  .container-new-clothing{
     display: flex;
     align-items: center;
     justify-content: center;
