--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
     font-size: 20px;
     font-weight: bold; }
 
-.container-heels {
+.container-new-heels {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,7 +25,7 @@ body {
   margin: 10px;
   border: 10px; }
 
-.container-clothing {
+.container-new-clothing {
   display: flex;
   align-items: center;
   justify-content: center;
