--- a/css/main.css
+++ b/css/main.css
@@ -32,3 +32,29 @@ body {
   padding: 10px;
   margin: 10px;
   border: 10px; }
+
+body {
+  background-image: url(../multimedia/img/fondo2.jpg) !important;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #faf5f5;
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box; }
+
+.header-cart {
+  text-align: center; }
+  .header-cart p {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    font-weight: bold; }
+
+#mainProducts {
+  display: flex;
+  flex-direction: column;
+  text-align: center; }
+  #mainProducts img {
+    max-width: 200px; }
